--- a/src/sample/volleyball.fxml
+++ b/src/sample/volleyball.fxml
@@ -163,6 +163,55 @@
                   </AnchorPane>
               </content>
             </Tab>
+                <Tab text="Zawieszenia">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="suspensionTable" layoutX="14.0" layoutY="113.0" prefHeight="110.0" prefWidth="475.0">
+                                    <columns>
+                                        <TableColumn fx:id="suspensionPlayerNameColumn" prefWidth="75.0" text="Imie" />
+                                        <TableColumn fx:id="suspensionPlayerSurnameColumn" prefWidth="118.0" text="Nazwisko" />
+                              <TableColumn fx:id="suspensionStartDate" minWidth="-Infinity" prefWidth="145.0" text="Rozpoczęcie zawieszenia" />
+                              <TableColumn fx:id="suspensionEndDate" prefWidth="136.0" text="Koniec zawieszenia" />
+                                    </columns>
+                                </TableView>
+                        <Text layoutX="42.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zawieszenia" />
+                        <ComboBox fx:id="playerCombobox" layoutX="540.0" layoutY="73.0" prefHeight="25.0" prefWidth="160.0" promptText="Zawodnik" />
+                        <ComboBox fx:id="cardCombobox" layoutX="540.0" layoutY="118.0" prefHeight="25.0" prefWidth="160.0" promptText="Kartka" />
+                        <TableView fx:id="cardTable" layoutX="526.0" layoutY="192.0" prefHeight="98.0" prefWidth="224.0">
+                          <columns>
+                            <TableColumn fx:id="cardsColumn" prefWidth="110.0" text="Kartka" />
+                              <TableColumn fx:id="playerIdInCardsColumn" prefWidth="113.0" text="Zawodnik" />
+                          </columns>
+                        </TableView>
+                        <Text layoutX="539.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Przydzielanie kartek zawodnikom" />
+                        <Button layoutX="540.0" layoutY="155.0" mnemonicParsing="false" onAction="#addCardToPlayer" prefHeight="25.0" prefWidth="160.0" text="Zapisz kartkę zawodnikowi" />
+                        <Button layoutX="526.0" layoutY="302.0" mnemonicParsing="false" onAction="#deleteCard" text="Usuń kartkę" />
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+            <Tab text="Mecz">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ComboBox fx:id="hostCadreCombobox" layoutX="14.0" layoutY="26.0" prefWidth="150.0" promptText="Gospodarze" />
+                        <ComboBox fx:id="guestCadreCombobox" layoutX="14.0" layoutY="76.0" prefWidth="150.0" promptText="Goście" />
+                        <TextField fx:id="tfFrequency" layoutX="15.0" layoutY="122.0" promptText="Frekwencja" />
+                        <TextField fx:id="tfFixture" layoutX="15.0" layoutY="165.0" promptText="Kolejka" />
+                        <TableView fx:id="matchTable1" layoutX="215.0" layoutY="22.0" prefHeight="252.0" prefWidth="455.0">
+                           <columns>
+                              <TableColumn fx:id="hostColumn1" prefWidth="75.0" text="Gospodarz" />
+                              <TableColumn fx:id="guestColumn1" prefWidth="64.0" text="Gość" />
+                              <TableColumn fx:id="frequencyColumn1" prefWidth="86.0" text="Frekwencja" />
+                              <TableColumn fx:id="fixtureColumn1" prefWidth="77.0" text="Kolejka" />
+                           </columns>
+                        </TableView>
+                        <Button layoutX="15.0" layoutY="206.0" mnemonicParsing="false" onAction="#addMatch" text="Dodaj mecz" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
             <Tab text="Mecze, kadry i ich zawonicy">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -197,34 +246,6 @@
                   </AnchorPane>
               </content>
             </Tab>
-                <Tab text="Zawieszenia">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                            <children>
-                                <TableView fx:id="suspensionTable" layoutX="14.0" layoutY="113.0" prefHeight="110.0" prefWidth="475.0">
-                                    <columns>
-                                        <TableColumn fx:id="suspensionPlayerNameColumn" prefWidth="75.0" text="Imie" />
-                                        <TableColumn fx:id="suspensionPlayerSurnameColumn" prefWidth="118.0" text="Nazwisko" />
-                              <TableColumn fx:id="suspensionStartDate" minWidth="-Infinity" prefWidth="145.0" text="Rozpoczęcie zawieszenia" />
-                              <TableColumn fx:id="suspensionEndDate" prefWidth="136.0" text="Koniec zawieszenia" />
-                                    </columns>
-                                </TableView>
-                        <Text layoutX="42.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zawieszenia" />
-                        <ComboBox fx:id="playerCombobox" layoutX="540.0" layoutY="73.0" prefHeight="25.0" prefWidth="160.0" promptText="Zawodnik" />
-                        <ComboBox fx:id="cardCombobox" layoutX="540.0" layoutY="118.0" prefHeight="25.0" prefWidth="160.0" promptText="Kartka" />
-                        <TableView fx:id="cardTable" layoutX="526.0" layoutY="192.0" prefHeight="98.0" prefWidth="224.0">
-                          <columns>
-                            <TableColumn fx:id="cardsColumn" prefWidth="110.0" text="Kartka" />
-                              <TableColumn fx:id="playerIdInCardsColumn" prefWidth="113.0" text="Zawodnik" />
-                          </columns>
-                        </TableView>
-                        <Text layoutX="539.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Przydzielanie kartek zawodnikom" />
-                        <Button layoutX="540.0" layoutY="155.0" mnemonicParsing="false" onAction="#addCardToPlayer" prefHeight="25.0" prefWidth="160.0" text="Zapisz kartkę zawodnikowi" />
-                        <Button layoutX="526.0" layoutY="302.0" mnemonicParsing="false" onAction="#deleteCard" text="Usuń kartkę" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
             </tabs>
         </TabPane>
     </children>
