--- a/src/sample/volleyball.fxml
+++ b/src/sample/volleyball.fxml
@@ -26,13 +26,13 @@
                                 <Button layoutX="20.0" layoutY="252.0" mnemonicParsing="false" onAction="#deleteHall" text="Usuń" />
                                 <Button fx:id="editHallButton" layoutX="151.0" layoutY="252.0" mnemonicParsing="false" onAction="#editHall" text="Edytuj" />
                                 <Button layoutX="83.0" layoutY="252.0" mnemonicParsing="false" onAction="#addHall" text="Dodaj" />
-                                <TableView fx:id="hallTable" layoutX="314.0" layoutY="35.0" prefHeight="341.0" prefWidth="424.0">
+                                <TableView fx:id="hallTable" layoutX="314.0" layoutY="35.0" prefHeight="341.0" prefWidth="481.0">
                                     <columns>
-                                        <TableColumn fx:id="hallNameColumn" prefWidth="75.0" text="Nazwa" />
-                                        <TableColumn fx:id="hallCapacityColumn" prefWidth="75.0" text="Pojemność" />
-                                        <TableColumn fx:id="hallCityColumn" prefWidth="75.0" text="Miasto" />
-                                        <TableColumn fx:id="hallPostalCodeColumn" prefWidth="100.0" text="Kod pocztowy" />
-                                        <TableColumn fx:id="hallStreetColumn" prefWidth="100.0" text="Ulica" />
+                                        <TableColumn fx:id="hallNameColumn" prefWidth="102.0" text="Nazwa" />
+                                        <TableColumn fx:id="hallCapacityColumn" prefWidth="77.0" text="Pojemność" />
+                                        <TableColumn fx:id="hallCityColumn" prefWidth="70.0" text="Miasto" />
+                                        <TableColumn fx:id="hallPostalCodeColumn" prefWidth="113.0" text="Kod pocztowy" />
+                                        <TableColumn fx:id="hallStreetColumn" prefWidth="118.0" text="Ulica" />
                                     </columns>
                                 </TableView>
                             </children>
@@ -75,13 +75,13 @@
                                 <Button layoutX="20.0" layoutY="252.0" mnemonicParsing="false" onAction="#deleteLeague" text="Usuń" />
                                 <Button fx:id="editLeagueButton" layoutX="151.0" layoutY="252.0" mnemonicParsing="false" onAction="#editLeague" text="Edytuj" />
                                 <Button layoutX="83.0" layoutY="252.0" mnemonicParsing="false" onAction="#addLeague" text="Dodaj" />
-                                <TableView fx:id="leagueTable" layoutX="291.0" layoutY="35.0" prefHeight="341.0" prefWidth="447.0">
+                                <TableView fx:id="leagueTable" layoutX="291.0" layoutY="35.0" prefHeight="341.0" prefWidth="500.0">
                                     <columns>
-                                        <TableColumn fx:id="leagueNameColumn" prefWidth="75.0" text="Nazwa" />
-                                        <TableColumn fx:id="leagueLevelColumn" prefWidth="96.0" text="Poziom ligi" />
-                                        <TableColumn fx:id="leagueNumberOfTeamsColumn" prefWidth="124.0" text="Ilość zespołów" />
-                                        <TableColumn fx:id="leagueNumberOfMatchesColumn" prefWidth="81.0" text="Ilość kolejek" />
-                                        <TableColumn fx:id="leagueYearColumn" prefWidth="70.0" text="Rok" />
+                                        <TableColumn fx:id="leagueNameColumn" prefWidth="119.0" text="Nazwa" />
+                                        <TableColumn fx:id="leagueLevelColumn" prefWidth="99.0" text="Poziom ligi" />
+                                        <TableColumn fx:id="leagueNumberOfTeamsColumn" prefWidth="111.0" text="Ilość zespołów" />
+                                        <TableColumn fx:id="leagueNumberOfMatchesColumn" prefWidth="82.0" text="Ilość kolejek" />
+                                        <TableColumn fx:id="leagueYearColumn" prefWidth="88.0" text="Rok" />
                                     </columns>
                                 </TableView>
                                 <TextField fx:id="tfLeagueLevel" layoutX="33.0" layoutY="76.0" />
@@ -99,13 +99,13 @@
                                 <ComboBox fx:id="leagueComboboxInClub" layoutX="26.0" layoutY="164.0" prefWidth="150.0" promptText="Liga" />
                                 <ComboBox fx:id="coachComboboxInClub" layoutX="26.0" layoutY="219.0" prefWidth="150.0" promptText="Trener" />
                                 <TextField fx:id="tfClubName" layoutX="26.0" layoutY="277.0" promptText="Nazwa klubu" />
-                                <TableView fx:id="clubTable" layoutX="253.0" layoutY="46.0" prefHeight="285.0" prefWidth="489.0">
+                                <TableView fx:id="clubTable" layoutX="253.0" layoutY="46.0" prefHeight="285.0" prefWidth="533.0">
                                     <columns>
-                                        <TableColumn fx:id="clubNameColumn" prefWidth="99.0" text="Nazwa klubu" />
-                                        <TableColumn fx:id="clubHallColumn" prefWidth="82.0" text="Hala" />
-                                        <TableColumn fx:id="clubCountryColumn" prefWidth="97.0" text="Kraj" />
-                                        <TableColumn fx:id="clubLeagueColumn" prefWidth="96.0" text="Liga" />
-                                        <TableColumn fx:id="clubCoachColumn" prefWidth="114.0" text="Trener" />
+                                        <TableColumn fx:id="clubNameColumn" prefWidth="139.0" text="Nazwa klubu" />
+                                        <TableColumn fx:id="clubHallColumn" prefWidth="85.0" text="Hala" />
+                                        <TableColumn fx:id="clubCountryColumn" prefWidth="95.0" text="Kraj" />
+                                        <TableColumn fx:id="clubLeagueColumn" prefWidth="91.0" text="Liga" />
+                                        <TableColumn fx:id="clubCoachColumn" prefWidth="122.0" text="Trener" />
                                     </columns>
                                 </TableView>
                                 <Button layoutX="25.0" layoutY="331.0" mnemonicParsing="false" onAction="#deleteClub" text="Usuń" />
@@ -125,14 +125,14 @@
                                 <TextField fx:id="tfPlayerAge" layoutX="15.0" layoutY="164.0" promptText="Wiek" />
                                 <TextField fx:id="tfPlayerHeight" layoutX="15.0" layoutY="206.0" promptText="Wzrost" />
                                 <TextField fx:id="tfPlayerScoredPoints" layoutX="16.0" layoutY="249.0" promptText="Zdobyte punkty" />
-                                <TableView fx:id="playerTable" layoutX="230.0" layoutY="31.0" prefHeight="207.0" prefWidth="448.0">
+                                <TableView fx:id="playerTable" layoutX="230.0" layoutY="31.0" prefHeight="207.0" prefWidth="558.0">
                                     <columns>
-                                        <TableColumn fx:id="playerClubColumn" prefWidth="75.0" text="Klub" />
-                                        <TableColumn fx:id="playerNameColumn" prefWidth="75.0" text="Imię" />
-                                        <TableColumn fx:id="playerSurnameColumn" prefWidth="75.0" text="Nazwisko" />
-                                        <TableColumn fx:id="playerAgeColumn" prefWidth="57.0" text="Wiek" />
-                                        <TableColumn fx:id="playerHeightColumn" prefWidth="69.0" text="Wzrost" />
-                                        <TableColumn fx:id="playerScoredPointsColumn" minWidth="0.0" prefWidth="96.0" text="Zdobyte punkty" />
+                                        <TableColumn fx:id="playerClubColumn" prefWidth="125.0" text="Klub" />
+                                        <TableColumn fx:id="playerNameColumn" prefWidth="99.0" text="Imię" />
+                                        <TableColumn fx:id="playerSurnameColumn" prefWidth="92.0" text="Nazwisko" />
+                                        <TableColumn fx:id="playerAgeColumn" prefWidth="73.0" text="Wiek" />
+                                        <TableColumn fx:id="playerHeightColumn" prefWidth="73.0" text="Wzrost" />
+                                        <TableColumn fx:id="playerScoredPointsColumn" minWidth="0.0" prefWidth="95.0" text="Zdobyte punkty" />
                                     </columns>
                                 </TableView>
                                 <Button layoutX="14.0" layoutY="289.0" mnemonicParsing="false" onAction="#deletePlayer" text="Usuń" />
@@ -151,7 +151,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <TableView fx:id="suspensionTable" layoutX="14.0" layoutY="113.0" prefHeight="110.0" prefWidth="475.0">
+                                <TableView fx:id="suspensionTable" layoutX="14.0" layoutY="113.0" prefHeight="194.0" prefWidth="475.0">
                                     <columns>
                                         <TableColumn fx:id="suspensionPlayerNameColumn" prefWidth="75.0" text="Imie" />
                                         <TableColumn fx:id="suspensionPlayerSurnameColumn" prefWidth="118.0" text="Nazwisko" />
@@ -159,7 +159,10 @@
                               <TableColumn fx:id="suspensionEndDate" prefWidth="136.0" text="Koniec zawieszenia" />
                                     </columns>
                                 </TableView>
-                        <Text layoutX="42.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zawieszenia" />
+                        <Text layoutX="174.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Zawieszenia" wrappingWidth="154.3984375">
+                           <font>
+                              <Font size="24.0" />
+                           </font></Text>
                         <ComboBox fx:id="playerCombobox" layoutX="540.0" layoutY="73.0" prefHeight="25.0" prefWidth="160.0" promptText="Zawodnik" />
                         <ComboBox fx:id="cardCombobox" layoutX="540.0" layoutY="118.0" prefHeight="25.0" prefWidth="160.0" promptText="Kartka" />
                         <TableView fx:id="cardTable" layoutX="526.0" layoutY="192.0" prefHeight="98.0" prefWidth="224.0">
@@ -185,11 +188,11 @@
                         <ComboBox fx:id="cadrePlayerCombobox" layoutX="349.0" layoutY="146.0" prefWidth="150.0" promptText="Zawodnik" />
                         <Button layoutX="349.0" layoutY="219.0" mnemonicParsing="false" onAction="#addPlayerToCadre" text="Dodaj zawodnika do kadry" />
                         <Text layoutX="30.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tworzenie kadry dla danego klubu" />
-                        <TableView fx:id="cadreTable" layoutX="24.0" layoutY="158.0" prefHeight="200.0" prefWidth="240.0">
+                        <TableView fx:id="cadreTable" layoutX="24.0" layoutY="158.0" prefHeight="200.0" prefWidth="280.0">
                            <columns>
                               <TableColumn fx:id="cadreIdColumn" prefWidth="75.0" text="Id kadry" />
                               <TableColumn fx:id="matchIdColumn" prefWidth="75.0" text="id meczu" />
-                              <TableColumn fx:id="clubIdColumn" prefWidth="89.0" text="Klub" />
+                              <TableColumn fx:id="clubIdColumn" prefWidth="129.0" text="Klub" />
                            </columns>
                         </TableView>
                         <TableView fx:id="playersCadreTable" layoutX="513.0" layoutY="71.0" prefHeight="200.0" prefWidth="320.0">
